[package]
name = "trawler-mysql"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[features]
orchestration = ["mysql", "tsunami", "rusoto_core", "rusoto_sts", "failure"]
default = []

[profile.release]
debug = true

[dependencies]
trawler = "0.5.10"
mysql_async = "0.14"
tokio-core = "0.1"
clap = "2.31"
futures = "0.1"
chrono = "0.4"

mysql = { version = "12.3.1", optional = true }
failure = { version = "0.1.1", optional = true }
rusoto_core = { version = "0.31", optional = true }
rusoto_sts = { version = "0.31", optional = true }

[dependencies.tsunami]
git = "https://github.com/ekmartin/tsunami.git"
rev = "5321870e3e3d26ac3409be6d4483911d6d23fe18"
optional = true

[[bin]]
name = "trawler-mysql"
path = "src/main.rs"

[[bin]]
name = "trawler-mysql-ec2"
path = "src/ec2.rs"
required-features = ["orchestration"]

[[bin]]
name = "trawler-mysql-remote"
path = "src/remote.rs"
required-features = ["orchestration"]
